--- a/style.css
+++ b/style.css
@@ -20,4 +20,16 @@
   font-style: oblique;
   font-weight: bold;
   font-family: fantasy;
+
+  color: grey;
+}
+
+.Entete_Nom-Hote
+{
+  font-size: 16px;
+  font-style: oblique;
+  font-weight: bold;
+  font-family: fantasy;
+
+  color: #579cbb;
 }
