--- a/style.css
+++ b/style.css
@@ -75,10 +75,17 @@
   display: flex;
   flex-flow: column nowrap;
 
-  position: relative;
-
   padding: 10px;
   padding-bottom: 20px;
 
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+}
+
+.
+.Arbre_Tour-3
+{
+  display: flex;
+  flex-flow: row nowrap;
+
+  justify-content: space-around;
 }
