--- a/style.css
+++ b/style.css
@@ -81,32 +81,11 @@
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 }
 
-
-.Arbre_Tour-3, .Arbre_Tour-2, .Arbre_Tour-1, .Arbre_Tour-0
+.
+.Arbre_Tour-3
 {
   display: flex;
   flex-flow: row nowrap;
 
   justify-content: space-around;
-}
-.Arbre_Liens-1
-{
-  display: flex;
-      flex-flow: row nowrap;
-      justify-content: space-around;
-}
-
-.Connecter
-{
-  background: blue;
-  height: 2px;
-    flex: 1;
-    margin: 0px 85px;
-}
-
-.connector_tour{
-  background-color: blue;
-  width:2px;
-  height:50px;
-  margin:0 auto;
 }
