--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
   filter: drop-shadow(5px 5px 5px #222);
 }
 
-.Arbre
+.Arbre                    /* Conteneur Arbre */
 {
   display: flex;
   flex-flow: column nowrap;
@@ -82,7 +82,7 @@
 }
 
 
-.Arbre_Tour-3, .Arbre_Tour-2, .Arbre_Tour-1, .Arbre_Tour-0
+.Arbre_Tour-3, .Arbre_Tour-2, .Arbre_Tour-1, .Arbre_Tour-0      /* Les différents Tour */
 {
   display: flex;
   flex-flow: row nowrap;
@@ -90,9 +90,29 @@
   justify-content: space-around;
 }
 
-.Joueur
+.Joueur                   /* DIV de chaques joueurs */
 {
   cursor: pointer;
+}
+
+.Connecteur-Bas-Joueur
+{
+  width: 2px;
+  height: 20px;
+
+  margin: -4px auto;
+
+  background-color: #BEBFC1;
+}
+
+.Connecteur-Haut-Joueur
+{
+  width: 2px;
+  height: 20px;
+
+  margin: 0px auto;
+
+  background-color: #BEBFC1;
 }
 
 .Arbre_Liens-1
@@ -102,17 +122,4 @@
       justify-content: space-around;
 }
 
-.Connecter
-{
-  background: blue;
-  height: 2px;
-    flex: 1;
-    margin: 0px 85px;
-}
-
-.connector_tour{
-  background-color: blue;
-  width:2px;
-  height:50px;
-  margin:0 auto;
-}
+.Connec
