--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
   padding: 10px;
   padding-bottom: 20px;
 
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 }
 
 .Arbre_Tour      /* Pour chaques Tours */
@@ -182,4 +182,36 @@
   height: 2px;
 
   background-color: #BEBFC1;
+}
+
+.Onglets
+{
+  display: flex;
+  flex-flow: row nowrap;
+
+  padding-top:5px;
+  padding-bottom:5px;
+
+  box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.75);
+  border-bottom: 2px solid black;
+}
+
+.Onglets_Pad
+{
+  padding: 5px;
+  margin-right: 10px;
+  margin-left: 10px;
+
+  border: 2px solid white;
+
+  cursor: pointer;
+}
+
+.Onglets_Texte
+{
+  font-size: 20px;
+  font-style: oblique;
+  font-weight: lighter;
+
+  color: white;
 }
