--- a/style.css
+++ b/style.css
@@ -84,10 +84,9 @@
   padding-bottom: 20px;
 
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-}
 
-.Arbre_Tour      /* Pour chaques Tours */
-{
+
+  transform: rotateY(0deg);
   transition-property: transform;
   transition-duration: 1s;
 }
@@ -225,6 +224,10 @@
   padding-bottom: 20px;
 
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
+  transform: rotateY(90deg);
+  transition-property: transform;
+  transition-duration: 1s;
 }
 
 .Parametres-Onglet
@@ -236,4 +239,23 @@
   padding-bottom: 20px;
 
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
+  transform: rotateY(90deg);
+  transition-property: transform;
+  transition-duration: 1s;
+}
+
+.Aide-Onglet
+{
+  display: none;
+  flex-flow: column nowrap;
+
+  padding: 10px;
+  padding-bottom: 20px;
+
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
+  transform: rotateY(90deg);
+  transition-property: transform;
+  transition-duration: 1s;
 }
