--- a/style.css
+++ b/style.css
@@ -74,7 +74,36 @@
   filter: drop-shadow(5px 5px 5px #222);
 }
 
-/* STYLES ARBRE */
+
+
+/* STYLES TOUT LES ONGLETS */
+.Onglets
+{
+  display: flex;
+  flex-flow: row nowrap;
+
+  padding-top:5px;
+  padding-bottom:5px;
+
+  box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.75);
+  border-bottom: 2px solid black;
+}
+
+/* STYLES BASE DES ONGLETS ONGLET */
+.Onglets_
+{
+  padding: 5px;
+  margin-right: 10px;
+  margin-left: 10px;
+
+  border: 2px solid white;
+
+  cursor: pointer;
+}
+
+
+
+/* STYLES ONGLET ARBRE */
 .Arbre-Onglet                    /* Conteneur Arbre */
 {
   display: flex;
@@ -183,28 +212,7 @@
   background-color: #BEBFC1;
 }
 
-.Onglets
-{
-  display: flex;
-  flex-flow: row nowrap;
 
-  padding-top:5px;
-  padding-bottom:5px;
-
-  box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.75);
-  border-bottom: 2px solid black;
-}
-
-.Onglets_Pad
-{
-  padding: 5px;
-  margin-right: 10px;
-  margin-left: 10px;
-
-  border: 2px solid white;
-
-  cursor: pointer;
-}
 
 .Onglets_Texte
 {
