--- a/NEW/style.css
+++ b/NEW/style.css
@@ -108,7 +108,11 @@
 .Nav
 {
   margin-left: 70px;
-  margin-right: 70px;
+  margin-right: 46px;
+  transform: skewX(-30deg);
+  background-color: #333743;
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  margin-top: 50px;
 }
 
 .Nav_Ul
@@ -117,8 +121,6 @@
   flex-flow: row nowrap;
 
   list-style: none;
-
-  margin-top: 50px;
 }
 
 .Nav li
@@ -127,7 +129,6 @@
   color: white;
   border-left: 1px solid white;
   border-top: 1px solid white;
-  transform: skewX(-30deg);
   padding: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -156,27 +157,41 @@
   border-right: 1px solid white;
 }
 
+#Nav_Fin
+{
+  width: 100%;
+  color: black;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  cursor: context-menu;
+}
+
 .Nav_Actif
 {
+  border-bottom: 1px solid #333743;
+}
+
+.Onglets
+{
+  overflow: auto;
+
+  margin-left: 58px;
+  margin-right: 58px;
+
+  background-color: #333743;
+  box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+
+  border-left: 1px solid black;
+  border-right: 1px solid black;
   border-bottom: 1px solid black;
 }
 
 
 
 /* ONGLET ARBRE */
-.Onglets
-{
-  margin-left: 58px;
-  margin-right: 58px;
-
-  background-color: #333743;
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-}
-
 .Onglet_Arbre
 {
-  overflow: auto;
-
   padding: 10px;
   padding-bottom: 20px;
 
@@ -185,6 +200,36 @@
   transition-duration: 1s;
 }
 
+.Arbre_Tour
+{
+  display: flex;
+  flex-flow: row nowrap;
+
+  width: 100%;
+}
+
+.Bloc-Joueurs
+{
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+
+  padding: 5px;
+
+  border: 3px solid #B4B4B4;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.Bloc-Joueurs_Infos
+{
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+
+
+/* PIED DE PAGE */
 .Pied-Page
 {
   height: 100px;
