--- a/NEW/style.css
+++ b/NEW/style.css
@@ -119,7 +119,7 @@
   margin-right: 46px;
   transform: skewX(-30deg);
   background-color: #333743;
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  /* box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75); */
   margin-top: 50px;
 }
 
@@ -186,9 +186,11 @@
 
   margin-left: 58px;
   margin-right: 58px;
+  padding: 10px;
+  padding-bottom: 20px;
 
   background-color: #333743;
-  box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+  /* box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75); */
 
   border-left: 1px solid black;
   border-right: 1px solid black;
@@ -270,8 +272,25 @@
   overflow: auto;
 }
 
+.Onglets_Joueurs_Liste
+{
+  display: flex;
+  flex-flow: column nowrap;
+
+  max-width: 200px;
+
+  border-right: 1px solid black;
+}
+
+.Onglets_Joueurs_Liste_Pseudo
+{
+  
+}
+
+
 
 /* ################### */
+
 
 
 /* ONGLET PARAMETRES */
@@ -282,6 +301,7 @@
   align-items: center;
   justify-content: center;
 }
+
 
 
 /* ################### */
