--- a/NEW/style.css
+++ b/NEW/style.css
@@ -208,10 +208,6 @@
   padding-bottom: 20px;
 
   overflow: auto;
-
-  transform: rotateY(0deg);
-  transition-property: transform;
-  transition-duration: 1s;
 }
 
 .Arbre_Tour
@@ -222,6 +218,13 @@
   justify-content: space-around;
 
   width: 100%;
+}
+
+.Bracket
+{
+  display: flex;
+  flex-flow: row;
+  height: 85px;
 }
 
 .Bloc-Joueurs
