--- a/NEW/style.css
+++ b/NEW/style.css
@@ -31,8 +31,8 @@
 /* ################### */
 
 
-/* PAGE ACCEUIL */
-.Acceuil
+/* PAGE ACCUEIL */
+.Accueil
 {
   display: flex;
   justify-content: center;
@@ -47,6 +47,27 @@
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.Accueil_Fenetre
+{
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  padding: 10px;
+
+  border: 1px solid white;
+}
+
+.Fenetre-1
+{
+  display: flex;
+}
+
+.Fenetre-2
+{
+  display: none;
 }
 
 /* ################### */
@@ -228,9 +249,6 @@
 .Onglet_Arbre
 {
   flex-flow: column nowrap;
-  justify-content: space-between;
-  justify-content: space-evenly;
-  align-items: center;
 
   padding: 10px;
   padding-bottom: 20px;
@@ -238,7 +256,7 @@
   overflow: auto;
 }
 
-.Arbre_Tour
+.Arbre_Tour, .Arbre_Interconnecteurs
 {
   display: flex;
   flex-flow: row nowrap;
@@ -257,12 +275,6 @@
 
   min-width: 90px;
   min-height: 65px;
-  margin: 5px;
-  padding: 5px;
-
-  border: 3px solid #B4B4B4;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 .Bloc-Joueurs_Infos
@@ -271,6 +283,15 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 5px;
+
+  border: 3px solid #B4B4B4;
+  border-radius: 5px;
+  cursor: pointer;
 
   color: white;
   font-size: 27px;
@@ -281,6 +302,19 @@
   border-bottom: 1px solid white;
 }
 
+.Connecteur-Joueur
+{
+  width: 2px;
+  height: 20px;
+
+  background-color: white;
+}
+
+.InterConnecteur
+{
+  width: 10%;
+  height: 2px;
+}
 
 /* ################### */
 
