--- a/style.css
+++ b/style.css
@@ -1,254 +1,305 @@
-/* INITILISATION CSS */
-@font-face
-{
-  font-family: 'Grand-Titre';
-  src: url('Contenu/Polices/Polices/good_morning_2/Good-Morning.ttf');
-}
-
-@font-face
-{
-  font-family: 'Petit-Titre';
-  src: url('Contenu/Polices/Polices/roboto/Roboto-Thin.ttf');
-}
-
-@font-face
-{
-  font-family: 'Hote';
-  src: url('Contenu/Polices/Polices/krinkes/KrinkesRegularPERSONAL.ttf');
-}
-
-
-*                   /* Initialisation CSS des éléments HTML */
+/* INITIALISATION CSS */
+*
 {
   margin: 0px;
   padding: 0px;
 }
 
 
+/* ################### */
 
-/* STYLES PAGE */
+
+/* DEFINITION POLICE */
+@font-face
+{
+  font-family: 'Titre-Tournois';
+  src: url('../Contenu/Polices/Polices/good_morning_2/Good-Morning.ttf');
+}
+
+
+/* ################### */
+
+
+/* PAGE COMPLETE */
 .Page
 {
-  background-color: #272A33;
+  position: relative;
+  background-color: #142939;
 }
 
 
+/* ################### */
 
-/* STYLES ENTETE */
-.Entete
-{
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;  /* Si le space evenly n'est pas compatible */
-  justify-content: space-evenly;
-  align-items: center;
 
-  padding-top: 65px;
-  padding-bottom: 40px;
-  padding-left: 50px;
-  padding-right: 50px;
-
-  margin-bottom: 80px;
-
-  background-color: #23252D;
-
-  border-bottom: 2px solid #383a42;
-}
-
-.Entete_Titre-Tournois
-{
-  min-width: 720px;
-
-  margin-bottom: 55px;
-
-  font-family: 'Grand-Titre';
-  font-size: 30px;
-  font-weight: lighter;
-
-  color: #fc9e00;
-}
-
-.Infos-Texte_Desc-Hote
-{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-}
-
-.Infos-Texte_Desc-Hote_Hebergement
-{
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-
-  padding: 5px;
-}
-
-.Entete_Hote-Titre
-{
-  margin-bottom: 10px;
-
-  font-family: 'Petit-Titre';
-  font-weight: bolder;
-  color: #BCBFC7;
-}
-
-.Entete_Nom-Hote
-{
-  font-family: Hote;
-  font-size: 40px;
-  font-style: oblique;
-
-  color: #D8D8D8;
-}
-
-.Entete_Description
-{
-  max-width: 580px;
-  margin-bottom: 15px;
-
-  font-size: 15px;
-  font-style: oblique;
-
-  color: #BCBFC7;
-}
-
-.Entete_Infos-Img
+/* PAGE ACCUEIL */
+.Accueil
 {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  margin-left: 50px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.Accueil_Fenetre
+{
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  padding: 10px;
+
+  border: 1px solid white;
+}
+
+.Fenetre-1
+{
+  display: flex;
+}
+
+.Fenetre-2
+{
+  display: none;
+}
+
+/* ################### */
+
+
+
+/* ENTETE */
+.Entete
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 30px;
+  padding-top: 50px;
+
+  background-color: #21455f;
+
+  border-bottom: 2px solid grey;
+}
+
+.Entete_Infos-Txt
+{
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  margin-right: 10%;
+}
+
+.Entete_Titre-Tournois
+{
+  margin-bottom: 35px;
+
+  font-family: 'Titre-Tournois';
+  font-size: 230%;
+  color: #fc9e00;
+}
+
+.Entete_Infos-Hote-Desc
+{
+  display: flex;
+  align-items: center;
+
+  width: 100%;
+
+  padding-left: 5%;
+}
+
+.Entete_Infos-Hote
+{
+  display: flex;
+  flex-flow: column nowrap;
+
+  align-items: center;
+
+  margin-right: 10%;
+}
+
+.Entete_Info-Hote-Titre
+{
+  margin-bottom: 15px;
+}
+
+.Entete_Infos_Hote
+{
+  max-width: 100px;
+  filter: drop-shadow(0px 0px 2px #222);
+}
+
+.Entete_Infos_Desc
+{
+  max-width: 550px;
 }
 
 .Entete_Logo-Jeux
 {
-  width: 90%;
+  max-width: 240px;
   height: auto;
 
   filter: drop-shadow(5px 5px 5px #222);
 }
 
 
+/* ################### */
 
-/* STYLES NAVIGATION */
-.Nav_Onglets
+
+/* NAVIGATION */
+.Nav
+{
+  margin-left: 70px;
+  margin-right: 46px;
+  transform: skewX(-30deg);
+  background-color: #333743;
+  /* box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75); */
+  margin-top: 50px;
+}
+
+.Nav_Ul
 {
   display: flex;
   flex-flow: row nowrap;
 
-  position: relative;
+  list-style: none;
+}
 
-  padding-left: 50px;
-  padding-right: 50px;
-
-  margin-left: 70px;
-  margin-right: 70px;
-
+.Nav li
+{
   background-color: #333743;
-  border-bottom: 2px solid #747474;
-
-}
-
-.Nav_Onglets:before
-{
-  content: " ";
-  width: 100%;
-  height: 95%;
-
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: -10;
-
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-}
-
-.Nav_Onglets_Boutton
-{
-  padding: 5px;
-
-  border-left: 2px solid white;
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
-  transform: skewX(-30deg);
-
+  color: white;
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+  padding: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   cursor: pointer;
 }
 
-
-/* STYLES BASE DES ONGLETS ONGLET */
-.Onglets
+.Nav li p
 {
-  margin-left: 70px;
-  margin-right: 70px;
-
-  background-color: #333743;
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-
+  transform: skewX(30deg);
+  font-size: 25px;
 }
 
-/* STYLES ONGLET ARBRE */
-.Arbre-Onglet                    /* Conteneur Arbre */
+.Nav_Arbre
 {
-  display: flex;
-  flex-flow: column nowrap;
+  border-bottom: 1px solid white;
+}
 
-  overflow: auto;
+.Nav_Joueurs
+{
+  border-bottom: 1px solid white;
+}
+
+.Nav_Parametres
+{
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
+}
+
+#Nav_Fin
+{
+  width: 100%;
+  color: black;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  cursor: context-menu;
+}
+
+.Nav_Actif
+{
+  border-bottom: 1px solid #333743;
+}
+
+.Onglets
+{
+  min-height: 520px;
+
+  margin-left: 58px;
+  margin-right: 58px;
   padding: 10px;
   padding-bottom: 20px;
 
+  background-color: #333743;
+  /* box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75); */
 
-
-  transform: rotateY(0deg);
-  transition-property: transform;
-  transition-duration: 1s;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
-.Arbre_Tour-3, .Arbre_Tour-2, .Arbre_Tour-1, .Arbre_Tour-0      /* Les différents Tour */
+
+/* ################### */
+
+
+/* ONGLET ARBRE */
+.Onglet_Arbre
+{
+  flex-flow: column nowrap;
+
+  padding: 10px;
+  padding-bottom: 20px;
+
+  overflow: auto;
+}
+
+.Arbre_Tour, .Arbre_Interconnecteurs
 {
   display: flex;
   flex-flow: row nowrap;
-
+  align-items: center;
   justify-content: space-around;
+
+  width: 100%;
 }
 
-.Joueur                   /* DIV de chaques joueurs */
+.Bloc-Joueurs
 {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  justify-content: center;
 
+  min-width: 90px;
+  min-height: 65px;
+}
+
+.Bloc-Joueurs_Infos
+{
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
   padding: 5px;
 
   border: 3px solid #B4B4B4;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.Pseudo-Joueurs
-{
-  padding-bottom: 4px;
-
-  border-bottom: 2px solid white;
-
-  font-size: 25px;
-  font-style: italic;
-  font-weight: bold;
-  font-family: cursive;
 
   color: white;
+  font-size: 27px;
 }
 
-.Score-Joueurs
+.Bloc-Joueurs_Infos_Pseudo
 {
-  font-size: 25px;
-  font-style: italic;
-  font-weight: bold;
-  font-family: cursive;
-
-  color: white;
+  border-bottom: 1px solid white;
 }
 
 .Connecteur-Joueur
@@ -256,121 +307,94 @@
   width: 2px;
   height: 20px;
 
-  margin: 0px auto;
-
-  background-color: #BEBFC1;
+  background-color: white;
 }
 
-.Arbre_Conteneur-Connecteurs-Inter-Tours /* Conteneur pour tous les inters-connecteurs */
+.InterConnecteur
 {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
-}
-
-.Conteneur-Connecteurs          /* Pour chaques paire de connecteur */
-{
-  display: flex;
-  flex-flow: row nowrap;
-}
-
-.Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur       /* Chaques connecteurs du premier inter-tours*/
-{
-  width: 111px;
+  width: 10%;
   height: 2px;
-
-  background-color: #BEBFC1;
 }
 
-.Arbre_Conteneur-Connecteurs-Inter-Tour-2_Conteneur-Connecteurs_Connecteur       /* Chaques connecteurs du premier inter-tours*/
-{
-  width: 219px;
-  height: 2px;
-
-  background-color: #BEBFC1;
-}
-
-.Arbre_Conteneur-Connecteurs-Inter-Tour-1_Conteneur-Connecteurs_Connecteur       /* Chaques connecteurs du premier inter-tours*/
-{
-  width: 438px;
-  height: 2px;
-
-  background-color: #BEBFC1;
-}
+/* ################### */
 
 
-
-.Onglets_Texte
-{
-  font-size: 20px;
-  font-style: oblique;
-  font-weight: lighter;
-
-  color: white;
-}
-
-.Joueurs-Onglet
+/* ONGLET JOUEURS */
+.Onglet_Joueurs
 {
   display: none;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
+  justify-content: center;
 
   overflow: auto;
-
-  height: 524px;
-
-  padding: 10px;
-  padding-bottom: 20px;
-
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-
-  transform: rotateY(90deg);
-  transition-property: transform;
-  transition-duration: 1s;
 }
 
-.Parametres-Onglet
+.Onglets_Joueurs_Liste
+{
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 200px;
+
+  border-right: 1px solid black;
+}
+
+.Onglets_Joueurs_Liste_Pseudo
+{
+
+}
+
+.Onglets_Joueurs_Carte
+{
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+/* ################### */
+
+
+
+/* ONGLET PARAMETRES */
+.Onglet_Parametres
 {
   display: none;
   flex-flow: column nowrap;
-
-  min-height: 524px;
-
-  padding: 10px;
-  padding-bottom: 20px;
-
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-
-  transform: rotateY(90deg);
-  transition-property: transform;
-  transition-duration: 1s;
+  align-items: center;
+  justify-content: center;
 }
 
-.Onglets_Aide
+.Parametres-Input
 {
-  border-right: 2px solid white;
+  width: 142px;
+  text-align: center;
 }
 
-.Aide-Onglet
+.Onglet_Parametres_Jeux
 {
-  display: none;
-  flex-flow: column nowrap;
-
-  min-height: 524px;
-
-  padding: 10px;
-  padding-bottom: 20px;
-
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-
-  transform: rotateY(90deg);
-  transition-property: transform;
-  transition-duration: 1s;
+  width: 145px;
 }
 
+.Onglet_Parametres_Appliquer
+{
+  width: 70px;
+}
+
+/* ################### */
+
+
+/* PIED DE PAGE */
 .Pied-Page
 {
   height: 50px;
   width: 100%;
 
-  margin-top: 100px;
+  margin-top: 50px;
+
+  background-color: grey;
 }
