Style bloc joueur et Appliquer infos
+ Début de style sur les inputs des bloc joueurs
+ Ajout d'un bouton pour appliquer les informations de l'arbre

--- a/style.css
+++ b/style.css
@@ -297,9 +297,11 @@
   font-size: 27px;
 }
 
-.Bloc-Joueurs_Infos_Pseudo
+.Bloc-Joueurs_Infos_Pseudo, .Bloc-Joueurs_Infos_Score
 {
-  border-bottom: 1px solid white;
+  margin: 5px;
+
+  text-align: center;
 }
 
 .Connecteur-Joueur
