--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@
 
 .Entete_Logo-Jeux
 {
-  max-width: 240px;
+  max-width: 256px;
   height: auto;
 
   filter: drop-shadow(5px 5px 5px #222);
@@ -394,11 +394,38 @@
 {
   width: 142px;
   text-align: center;
+
+  margin-top: 10px;
+}
+
+.Onglet_Parametres_Nb-Joueurs
+{
+  width: 37px;
+  text-align: left;
+  padding-left: 2px;
 }
 
 .Onglet_Parametres_Jeux
 {
-  width: 145px;
+  display: flex;
+  flex-flow: row nowrap;
+  overflow: auto;
+
+  margin-top: 15px;
+}
+
+.Onglet_Parametres_Jeux-Logo
+{
+  width: 150px;
+  height: 150px;
+
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.Logo-Selectionne
+{
+  filter: drop-shadow(0px 0px 5px orange);
 }
 
 .Onglet_Parametres_Appliquer
