--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
   padding: 10px;
 
   border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .Fenetre-1
@@ -65,10 +66,30 @@
   display: flex;
 }
 
+.Fenetre-1_Titre
+{
+  color: white;
+  margin-bottom: 10px;
+}
+
+.Fenetre-1_Btn
+{
+  margin-bottom: 10px;
+}
+
 .Fenetre-2
 {
   display: none;
 }
+
+.Fenetre-2_Desc
+{
+  color: white;
+  margin-bottom: 20px;
+  font-size: 45px;
+}
+
+
 
 /* ################### */
 
@@ -364,7 +385,8 @@
 
 .Onglets_Joueurs_Liste_Pseudo
 {
-
+  background-color: black;
+  color: white;
 }
 
 .Onglets_Joueurs_Carte
@@ -394,8 +416,20 @@
 {
   width: 142px;
   text-align: center;
+  vertical-align: middle;
 
   margin-top: 10px;
+
+  background-color: black;
+  color: white;
+}
+
+.Onglet_Parametres_Desc-Tournois
+{
+  width: 450px;
+  height: 100px;
+  max-width: 500px;
+  max-height: 200px;
 }
 
 .Onglet_Parametres_Nb-Joueurs
